<!--
  ~ Copyright 2018 Lithium Technologies Pvt Ltd
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="li_logout">Logout</string>
    <string name="li_support_articles">ARTICLES</string>
    <string name="li_support_my_questions">MY QUESTIONS</string>
    <string name="li_title_activity_create_message">Ask a question</string>
    <string name="li_action_post_question">POST</string>
    <string name="li_ask_in_label">Ask in</string>
    <string name="li_default_category_label">General Discussion</string>
    <string name="li_search_title">Search</string>
    <string name="li_title_activity_messages">Conversation</string>
    <string name="li_action_share">Share</string>

    <string name="li_userNotLoggedIn">Please sign-in to browse through the Community</string>
    <string name="li_sdkNotInitialized">Oops! Community is not available right now.</string>
    <string name="li_login">LOGIN</string>
    <string name="li_noQuestionsTV">You have not asked any questions yet.</string>
    <string name="li_askAQuestion_all_caps">ASK A QUESTION</string>
    <string name="li_browse_all">Browse all</string>
    <string name="li_temp_dot_divider">.</string>
    <string name="li_support_activity_title">Community</string>
    <string name="li_post_reply_txt">REPLY</string>
    <string name="li_post_accept_txt">ACCEPT</string>
    <string name="li_post_unaccept_txt">UNACCEPT</string>

    <string name="li_kudos_plural_txt">%d Kudos</string>
    <string name="li_article_status_pinned">PINNED</string>
    <string name="li_article_status_resolved">RESOLVED</string>
    <string name="li_add_a_reply_txt">Add a reply&#8230;</string>
    <string name="li_selectImage">Select an image</string>
    <string name="li_title_activity_browse">Browse community</string>
    <string name="li_action_settings">Settings</string>
    <string name="li_post_status_discussion">Discussion</string>
    <string name="li_post_status_accepted_solution">Accepted Solution</string>
    <string name="li_noInternetAvailable">Waiting for network.</string>
    <string name="li_general_discussion">General Discussion</string>
    <string name="li_noArticlesTV">No articles to show</string>
    <string name="li_noSearchResultsTV">No search results to show</string>
    <string name="li_noMessagesTV">There are no replies yet</string>
    <string name="li_justNow">just now</string>
    <string name="li_ago">ago</string>
    <string name="li_pural">s</string>
    <string-array name="li_time">
        <item>year</item>
        <item>month</item>
        <item>day</item>
        <item>hour</item>
        <item>minute</item>
        <item>second</item>
    </string-array>
    <string name="li_imageNotLoaded">Image could not be loaded. Please try again.</string>
    <string name="li_create_message_title_validation">Title cannot be empty</string>
    <string name="li_create_message_body_validation">Message body cannot be empty</string>
    <string name="li_create_message_board_not_selected">Select a board before posting the message</string>
    <string name="li_create_message_error">Could not submit the question. Please try again.</string>
    <string name="li_create_message_no_access_error">Oops! you do not have access to create a message in this board.</string>
    <string name="li_replyPostError">Could not submit the reply. Please try again.</string>
    <string name="li_replyPostSuccess">Successfully posted.</string>
    <string name="li_image_read_no_permission">I do not have permission to save the Image in your SD card</string>
    <string name="li_noCategoriesTV">There are no categories in the community</string>
    <string name="li_choose_category_txt">Choose category</string>
    <string name="li_cancel_dialog">Cancel</string>
    <string name="li_search_hint">Community Search</string>
    <string name="li_retry">Retry</string>
    <string name="li_post_kudo_count_default">0</string>
    <string name="li_hint_post_title">Title</string>
    <string name="li_hint_post_body">Enter your message</string>
    <string name="li_kudo_error_txt">Could not kudo the post. Please try again.</string>
    <string name="li_title_activity_articles">Articles</string>
    <string name="li_one_level_up">..</string>
    <string name="li_accept_success_txt">Successfully accepted</string>
    <string name="li_accept_error_txt">Could not accept the solution. Please try again.</string>
    <string name="li_accept_forbidden_txt">You do not have access to accept the solution.</string>
    <string name="li_click_to_select_board">Click here to select the board</string>
    <string name="li_uploaded_img_default_desc">Uploaded via community android app.</string>
    <string name="li_kudo_count_font_size">14</string>
    <string name="li_parent_folder_sub_text">Parent Category</string>
    <string name="li_login_failure">Could not start login. Please try again later.</string>
    <string name="li_article_list_separator">•</string>
    <string name="li_share_via">Share via</string>
    <string name="li_are_you_sure">Do you want to discard this message?</string>
    <string name="li_yes">Yes</string>
    <string name="li_no">No</string>
    <string name="li_title_label">Title</string>
    <string name="li_in_reply_to_text">In reply to %s</string>
    <string name="li_unread_questions_overall_count">lithium.sdk.ui.my_question_unread_count</string>
    <string name="li_messsage_create_successful">lithium.sdk.ui.create_message_successful</string>
    <string name="li_article_list_new_reply_count">%s new reply</string>
    <string name="li_article_list_new_reply_count_plural">%s new replies</string>
    <string name="li_create_message_image_upload_error">Could not upload the image to community. Please try again.</string>
    <string name="li_image_format_not_supported">This image format is not supported currently.</string>
    <string name="li_image_size_too_large">Please upload image less than 15MB.</string>
    <string name="li_action_mark_read">Mark as read</string>
    <string name="li_action_mark_unread">Mark as unread</string>
    <string name="li_report_inappropriate_content">Report Inappropriate Content</string>
    <string name="li_moderator_notified">Moderator notified</string>
    <string name="li_tell_us_why_inappropriate">Tell us why you believe this content is inappropriate.</string>
    <string name="li_notify_moderator">Notify Moderator</string>
    <string name="li_action_report_abuse">REPORT</string>
    <string name="li_report_abouse_error">Could not report the post to moderator. Please try again later.</string>
    <string name="li_mark_read_successful">Message marked as read.</string>
    <string name="li_mark_read_unsuccessful">Could not mark message as read.</string>
    <string name="li_mark_unread_successful">Message marked as unread.</string>
    <string name="li_mark_unread_unsuccessful">Could not mark message as unread.</string>
    <string name="li_image_upload_generic_error">Please select image again. Something went wrong.</string>
    <string name="li_action_delete">Delete</string>
    <string name="li_action_delete_unsuccessful">Could not delete the message. Please try again later</string>
    <string name="li_action_delete_successful">Successfully deleted.</string>
    <string name="li_reply_subject_prepender">Re:&#160;</string>
    <string name="li_select_image_source">Select Image Source</string>
    <string name="li_subscribe">Subscribe</string>
    <string name="li_unsubscribe">Unsubscribe</string>
    <string name="li_action_subscribe_successful">Subscribed Successfully</string>
    <string name="li_action_subscribe_unsuccessful">Could not Subscribe to the message. Please try again later</string>
    <string name="li_action_unsubscribe_successful">Un-Subscribed Successfully</string>
    <string name="li_action_unsubscribe_unsuccessful">Could not Un-Subscribe from the message. Please try again later</string>
    <string name="li_main_navigation_menu_my_activity">My Activity</string>
    <string name="li_main_navigation_menu_logout">Logout</string>
    <string name="li_main_navigation_menu_login">Login</string>
    <string name="li_main_navigation_drawer_open">Open</string>
    <string name="li_main_navigation_drawer_close">Close</string>
    <string name="li_main_navigation_header_title">Anonymous User</string>
    <string name="li_main_navigation_header_img_desc">icon</string>
    <string name="li_warning_logout_failed">Logout Failed!</string>
    <string name="li_warning_logout_cancelled">Logout Cancelled!</string>
    <string name="li_info_logout_succeeded">Logout Success!</string>
    <string name="li_logout_progress_title">Logout</string>
    <string name="li_logout_progress_message">Logging out...</string>
</resources>
