<?xml version="1.0" encoding="utf-8"?>
<com.lithium.community.android.ui.components.custom.ui.LiSoftKeyboardLsnrLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/in_reply_to_container">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:tint="@color/li_listIconColor"
            android:padding="@dimen/li_general_padding"
            android:src="@drawable/ic_arrow_downward_black"
            android:id="@+id/in_reply_to_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_reply_to_text"
            android:text="@string/li_in_reply_to_text"
            android:padding="@dimen/li_general_padding"
            android:layout_toEndOf="@id/in_reply_to_image"
            android:textStyle="bold"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/li_ask_question_subject_container"
        android:background="@drawable/li_border_light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/li_title_label"
            android:padding="@dimen/li_general_padding"
            android:textSize="@dimen/li_ask_title_label_size"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:padding="@dimen/li_general_padding"
            android:maxLines="1"
            android:maxEms="1"
            android:id="@+id/li_ask_question_subject"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:background="@drawable/li_border_light"
        android:padding="@dimen/li_general_padding"
        android:hint="@string/li_hint_post_body"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:id="@+id/li_ask_question_body"/>
</com.lithium.community.android.ui.components.custom.ui.LiSoftKeyboardLsnrLinearLayout>