<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/news_row"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="5dp">-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/li_general_padding"
        android:orientation="vertical"
        android:id="@+id/li_conversation_footer">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/li_post_title_txt"
            android:padding="@dimen/li_general_padding"
            android:textStyle="bold|italic"
            android:textSize="@dimen/li_message_original_post_title_text_size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/li_post_status_header"
            android:padding="@dimen/li_general_padding"
            android:textStyle="bold"
            android:background="@color/li_dividerColor"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/li_general_padding"
            android:id="@+id/li_post_user_details">
            <lithium.community.android.ui.components.custom.ui.LiRoundedImageView
                android:layout_width="@dimen/li_post_user_image_dimen"
                android:layout_height="@dimen/li_post_user_image_dimen"
                android:id="@+id/li_user_image"
                android:scaleType="centerInside"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/li_user_name"
                android:textStyle="bold|italic"
                android:padding="@dimen/li_general_padding"
                android:layout_toEndOf="@id/li_user_image"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/li_conversation_actions_button"
                android:src="@drawable/ic_vertical_dots_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/li_post_time_ago"
                android:padding="@dimen/li_general_padding"
                android:layout_toStartOf="@id/li_conversation_actions_button"/>

        </RelativeLayout>
        <WebView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:id="@+id/li_post_body"
            android:padding="@dimen/li_general_padding"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/li_post_actions_container"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/li_theme_messageKudoBtnIcon"
                android:padding="@dimen/li_general_padding"
                android:layout_alignParentStart="true"
                android:id="@+id/li_post_kudo_btn"/>
            <ProgressBar
                android:id="@+id/li_kudo_action_progress"
                android:layout_width="@dimen/li_article_accept_img_height"
                android:layout_height="@dimen/li_article_accept_img_height"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/li_post_kudo_count"
                android:text="@string/li_kudo_count_font_size"
                android:padding="@dimen/li_general_padding"
                android:layout_toEndOf="@id/li_post_kudo_btn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/li_post_reply_txt"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/li_general_padding"
                android:text="@string/li_post_reply_txt"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/li_theme_messageReplyBtnIcon"
                android:layout_toStartOf="@id/li_post_reply_txt"
                android:padding="@dimen/li_general_padding"
                android:id="@+id/li_post_reply_btn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/li_post_accept_txt"
                android:layout_toStartOf="@id/li_post_reply_btn"
                android:padding="@dimen/li_general_padding"
                android:text="@string/li_post_accept_txt"
                />
            <ImageView
                android:layout_width="@dimen/li_article_accept_img_width"
                android:layout_height="@dimen/li_article_accept_img_height"
                android:src="?attr/li_theme_messageAcceptBtnIcon"
                android:layout_toStartOf="@id/li_post_accept_txt"
                android:padding="@dimen/li_general_padding"
                android:id="@+id/li_post_accept_btn"/>
            <ProgressBar
                android:id="@+id/li_accept_action_progress"
                android:layout_width="@dimen/li_article_accept_img_height"
                android:layout_height="@dimen/li_article_accept_img_width"
                android:layout_toStartOf="@id/li_post_accept_txt"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </RelativeLayout>
        <!--<View android:background="@android:color/black"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1px"/>-->
    </LinearLayout>
<!--</android.support.v7.widget.CardView>-->
